--- a/menudesplegable.css
+++ b/menudesplegable.css
@@ -150,8 +150,8 @@ h1{
     margin-left: 40px;
     margin-top: 20px;
     padding-bottom: 20px;
-   /* max-width: 300px;*/
-    /*height: auto;*/
+    max-width: 300px;
+    height: auto;
    vertical-align: middle;
    display: contents;
 
@@ -253,6 +253,7 @@ h2{
       max-width: 940px;
       margin-bottom: 40px;
   }
+ 
   
 
 @media (max-width: 767px){
