--- a/menudesplegable.css
+++ b/menudesplegable.css
@@ -14,12 +14,7 @@ body{
 }
 
 
-.conteiner{
-   
-  /*  max-width: 1000px;
-    margin: auto;
-    border-radius: 3px;*/
-}
+
 .header{
     max-width: 1000px;
     margin: auto;
@@ -40,15 +35,7 @@ body{
 
 
 
-/*.info-item{
-    width: 400px;
-}*/
-/*.info{
-    background-color: cyan;
-   
-    float: right;
 
-}*/
 
 .nav{
     max-width: 1000px;
@@ -109,7 +96,6 @@ body{
 .zona{
     
     display:block;
-   /* margin-bottom: 200px;*/
    height: 400px;
    
 }
@@ -135,7 +121,7 @@ h1{
 
 }
 .descripcion{
-    color: white;
+    color:mediumblue;
     text-align: center;
     display: block;
    /* padding: 20px;*/
@@ -144,7 +130,7 @@ h1{
     margin-bottom: 40px;
 }
 .instalaciones{
-    background-color: royalblue;
+    
     max-width: 1000px;
     margin: auto;
     margin-bottom: 80px;
@@ -261,12 +247,7 @@ h2{
       text-transform: uppercase;
       color:white;
   }
-  /*.direccion{
-      margin-bottom: 20px;
-      width: 200px;
-      height: 50;
-      background-color: floralwhite;
-  }*/
+ 
   .link-pie{
       background-image:linear-gradient(#FFF)50%,(#BBB);
       padding: 20px 35px;
