--- a/menudesplegable.css
+++ b/menudesplegable.css
@@ -169,8 +169,29 @@ h1{
     margin-bottom: 60px;
 
 }
+.cobertura{
+    max-width: 100%;
+    background-color: whitesmoke;
+    height: 300px;
+    border-radius: 10px;
 
-
+}
+.cobertura1{
+    max-width: 100%;
+    background-color: whitesmoke;
+    height: 400px;
+    border-radius: 10px;
+}
+.images{
+    position: relative;
+    float: right;;
+    margin: 20px;
+}
+.images1{
+   position: relative;
+    float: left;
+    margin: 16px;
+}
 .pie{
     max-width: 100%;
     height: auto;
@@ -224,7 +245,6 @@ h2{
     color: white;
   }
   
- 
   
   
   
@@ -271,8 +291,9 @@ h2{
      width: 100%;
  }
  .diseño{
-    
+    color:teal;
      margin-left: 300px;
+     padding-top: 20px;
  }
 
 @media (max-width: 767px){
@@ -302,6 +323,25 @@ h2{
        height: 40px;
    }
  .diseño{
+     margin-left: 0px;
+ }
+img{
+    width: 150;
+    height: 50;
+    
+}
+.images{
+    width: 180px;
+}
+ .images1{
+     width: 190px;
+     text-align: center;
+     float: left;
+ }
+ .cobertura1{
+     height: 1000px;
+ }
+ .span{
      margin-left: 0px;
  }
    
